update index.html content

--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@ Simple web page with wishlist items.
   
   <section class="item-grid">
     <div class="item-tile">
-      <a href="https://monicajasper.github.io/saku-bonsai/index.html"
+      <a href="item-link"
       target="_blank">
-      <img class="item-image" src="https://monicajasper.github.io/saku-bonsai/site.png"
-        alt="Saku Bonsai product landing page site with black and white icon and seedling picture"/>
+      <img class="item-image" src="pic-link"
+        alt="long underwear pic"/>
       
       <p class="item-name">
         <span class="code">&lt;</span>
-        Saku Bonsai
+        Long underwear
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
   </div>
   
   <div class="item-tile">
-    <a href="https://monicajasper.github.io/hines57/index.html"
+    <a href="item-link"
       target="_blank">
-      <img class="item-image" src="https://monicajasper.github.io/hines57/site.png"
-        alt="Hines 57 tribute site with black and white picture of Gregory Hines tapping"/>
+      <img class="item-image" src="pic-link"
+        alt="undies pic desc"/>
       
       <p class="item-name">
         <span class="code">&lt;</span>
-        Hines 57 - Gregory Hines Tribute
+        Undies
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
@@ -97,10 +97,11 @@ Simple web page with wishlist items.
 <section id="casa">
   <h2>Casa</h2>
   <div>
-    <a id="profile-link" href="https://github.com/monicajasper"
+    <a id="profile-link" href="item-link"
       target="_blank">
-      <img class="contact-logo" src="https://monicajasper.github.io/portfolio/GitHub-Mark-120px-plus.png"
-        alt="Github logo of cat with octopus arm and black background"/>
+      <img class="contact-logo" src="pic-link"
+        alt="pic-desc"/>
+        <!-- LOUNGE CHAIRS AND HAMMOCK LUJO -->
     </a>
     <a href="https://www.arcgis.com/apps/Cascade/index.html?appid=f5df9e7d99a54e3e8020fce71244b91f"
     target="_blank">
