--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@ Simple web page with wishlist items.
         alt="pic-desc"/>
         <!-- LOUNGE CHAIRS AND HAMMOCK LUJO -->
     </a>
-    <a href="https://www.arcgis.com/apps/Cascade/index.html?appid=f5df9e7d99a54e3e8020fce71244b91f"
+    <a href="item-link"
     target="_blank">
-    <img class="contact-logo" src="https://monicajasper.github.io/portfolio/esri-logo.png"
-      alt="ESRI logo of blue and green globe with latitude and longitude gridlines"/>
+    <img class="contact-logo" src="item-link"
+      alt="pic-desc"/>
+      <!-- BRA; sunshade for leaf; snowboard bags-->
   </a>
     <a href="mailto:monicarhjasper@gmail.com?subject=Hello World">
       <img class="contact-logo" src="https://monicajasper.github.io/portfolio/email-logo.png"
@@ -118,7 +119,9 @@ Simple web page with wishlist items.
   
 <section id="dinero">
   <h2>Dinero</h2>
-  <p>¡Más dinero muy pronto!</p>
+  <p>¡Más dinero muy pronto!
+  $ toward insulation, $ toward rug    
+  </p>
 </section>
   
 <section id="otra">
