--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Simple web page with wishlist items.
   <div class="item-tile">
     <a href="https://monicajasper.github.io/joanna-lyrics/index.html"
       target="_blank">
-      <img class="item-image" src="https://monicajasper.github.io/joanna-lyrics/site.png"
+      <img class="item-image" src="pic-link"
         alt="Joanna Newsom lyrics documentation-style site. Navigation bar on left includes title, quote, and albums with select songs. Main page features first song and album cover."/>
       
       <p class="item-name">
@@ -81,7 +81,7 @@ Simple web page with wishlist items.
     <div class="item-tile">
     <a href="https://monicajasper.github.io/wea/index.html"
       target="_blank">
-      <img class="item-image" src="https://monicajasper.github.io/wea/site.png"
+      <img class="item-image" src="pic-link"
         alt="Survey with orange and purple tuatara lizard background asking for basics (name, phone, email), and how you feel today with kiwi slang options and survey intro."/>
       
       <p class="item-name">
