--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@ Simple web page with wishlist items.
   <header>
     <nav id="navbar">
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#ropa">Ropa</a></li>
-        <li><a href="#casa">Casa</a></li>
-        <li><a href="#dinero">Dinero</a></li>
-        <li><a href="#otra">Otra</a></li>
+        <li><a href="#sobre">Sobre</a></li>   <!--About-->
+        <li><a href="#ropa">Ropa</a></li>     <!--Clothes-->
+        <li><a href="#casa">Casa</a></li>     <!--Home-->
+        <li><a href="#dinero">Dinero</a></li> <!--Money-->
+        <li><a href="#otra">Otra</a></li>     <!--Other-->
       </ul>
     </nav>
   </header>
 
 
-<section id="about">
-  <h2>About</h2>
+<section id="sobre">
+  <h2>Sobre</h2>
 </section>
 
   
@@ -110,7 +110,7 @@ Simple web page with wishlist items.
       <!-- BRA; sunshade for leaf; snowboard bags-->
   </a>
     <a href="mailto:monicarhjasper@gmail.com?subject=Hello World">
-      <img class="contact-logo" src="https://monicajasper.github.io/portfolio/email-logo.png"
+      <img class="contact-logo" src="pic-link"
         alt="email symbol of envelope"/>
     </a>
   </div>
