update index.html items

--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@ Simple web page with wishlist items.
       target="_blank">
       <img class="contact-logo" src="pic-link"
         alt="pic-desc"/>
-        <!-- LOUNGE CHAIRS AND HAMMOCK LUJO -->
+        <!-- LOUNGE CHAIRS AND HAMMOCK LUJO 
+            https://www.anthropologie.com/shop/herbin-lounge-chair?_gl=1%2Addnz7h%2A_up%2AMQ..&category=furniture-chairs&color&gclid=Cj0KCQjww4-hBhCtARIsAC9gR3aaFgBq8Qd3dhZVPGa6OpdRJ4uVCRhZkfKZQUSgVHQjw5lhIL1DRHoaAo8PEALw_wcB&gclsrc=aw.ds
+            https://www.anthropologie.com/shop/boucle-bentwood-armchair2?category=furniture-chairs&color=011&_gl=1%2a3s88vr%2a_up%2aMQ..&gclid=Cj0KCQjww4-hBhCtARIsAC9gR3aaFgBq8Qd3dhZVPGa6OpdRJ4uVCRhZkfKZQUSgVHQjw5lhIL1DRHoaAo8PEALw_wcB&gclsrc=aw.ds&type=STANDARD&size=One%20Size&quantity=1
+            https://www.anthropologie.com/shop/mackinder-chair?category=furniture-chairs&color=026&_gl=1%2a3s88vr%2a_up%2aMQ..&gclid=Cj0KCQjww4-hBhCtARIsAC9gR3aaFgBq8Qd3dhZVPGa6OpdRJ4uVCRhZkfKZQUSgVHQjw5lhIL1DRHoaAo8PEALw_wcB&gclsrc=aw.ds&type=STANDARD&size=One%20Size&quantity=1
+        -->
     </a>
     <a href="item-link"
     target="_blank">
