--- a/index.html
+++ b/index.html
@@ -136,7 +136,11 @@ Simple web page with wishlist items.
 <section id="dinero">
   <h2>Dinero</h2>
   <p>¡Más dinero muy pronto!
-  $ toward insulation, $ toward rug    
+    $ toward insulation
+    https://greendoginsulation.co.nz/products/knauf-earthwool-insulation/
+    $ toward rug
+    https://boltofcloth.com/collections/living/products/multi-stem-rug-in-kingfisher
+    https://boltofcloth.com/collections/living/products/optical-flower-rug-runner-in-teal
   </p>
 </section>
   
