--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@ Simple web page with wishlist items.
       <p class="item-name">
         <span class="code">&lt;</span>
         Long underwear
+        Cam - merino long johns, size s, 150-200 weight
+        https://www.macpac.co.nz/macpac-mens-180-merino-long-johns/119560.html?dwvar_119560_color=Black&dwvar_119560_clearance=no#q=long%20johns&prefn1=gender&prefv1=Men's&start=5
+        https://www.rei.com/product/192915/rei-co-op-merino-185-base-layer-bottoms-mens
+        https://www.torpedo7.co.nz/products/T7MRB90XNER/title/men-s-summit--long-john
+        Mo - synthetic long johns, size s/6 (activity/daily)
+        Mo - 300 weight merino long johns, size s/6 (warmth)
+        balsam green or black size 6
+        https://www.macpac.co.nz/macpac-womens-geothermal-long-sleeve-top/119183.html?dwvar_119183_color=Lavender%20Frost&dwvar_119183_clearance=no#q=base%20layers&prefn1=gender&prefv1=Women's&start=1&sz=12
+        https://www.macpac.co.nz/macpac-womens-geothermal-pants/119185-URCH0-6.html
+        
+        undies
+        https://nisa.co.nz/collections/briefs/products/quinn-naturals-range-1?_pos=1&_fid=a54dd7754&_ss=c&variant=42281422160062
+        navy mist pecan boysenberry lilac
         <span class="code">&#47;&gt;</span>
       </p>
     </a>
