--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 HTML5
 Author: Monica Jasper
 Date: April 2023
+Updated: June 2023
 Simple web page with wishlist items.
 -->
 
@@ -139,12 +140,17 @@ Simple web page with wishlist items.
       <!--snowboard bags-->
     </a>
     <a href="mailto:monicarhjasper@gmail.com?subject=Hello World">
-      <img class="contact-logo" src="pic-link"
-        alt="email symbol of envelope"/>
+      <img class="" src="pic-link"
+        alt=""/>
     </a>
-    
-    <a href="https://www.nzgeo.com/stories/the-board-game-for-birders/"
+    <!--Wingpsan board game-->
+    <a href="https://stonemaiergames.com/games/wingspan/"
     target="_blank">
+      <a href="https://stonemaiergames.com/games/wingspan/wingspan-oceania-expansion/"
+    target="_blank">
+        <a href="https://www.nzgeo.com/stories/the-board-game-for-birders/"
+    target="_blank">
+    
     <img class="contact-logo" src="item-link"
       alt="pic-desc"/>
       <!--https://www.nzgeo.com/stories/the-board-game-for-birders/
