--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@ Simple web page with wishlist items.
     <img class="contact-logo" src="item-link"
       alt="pic-desc"/>
       <!--snowboard bags-->
+      padded snowboard bags
+      156 or similar size (at least 153cm), in black, silver, or another color 
+      https://www.torpedo7.co.nz/products/BUBG223B6/title/2023-gig-snowboard-bag
+      166 or similar size (at least 159cm), black padded
+      https://www.torpedo7.co.nz/products/BUBG223B5/title/2023-gig-bag
     </a>
     <a href="mailto:monicarhjasper@gmail.com?subject=Hello World">
       <img class="" src="pic-link"
