index.html now, in english!

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@ Simple web page with wishlist items.
   <header>
     <nav id="navbar">
       <ul>
-        <li><a href="#sobre">Sobre</a></li>   <!--About-->
-        <li><a href="#ropa">Ropa</a></li>     <!--Clothes-->
-        <li><a href="#casa">Casa</a></li>     <!--Home-->
-        <li><a href="#aficiones">Aficiones</a></li> <!--Hobbies-->
-        <li><a href="#dinero">Dinero</a></li> <!--Money-->
-        <li><a href="#otra">Otra</a></li>     <!--Other-->
+        <li><a href="#sobre">About</a></li>   <!--About-->
+        <li><a href="#ropa">Clothes</a></li>     <!--Clothes-->
+        <li><a href="#casa">Home</a></li>     <!--Home-->
+        <li><a href="#aficiones">Hobbies</a></li> <!--Hobbies-->
+        <li><a href="#dinero">Money</a></li> <!--Money-->
+        <li><a href="#otra">Other</a></li>     <!--Other-->
       </ul>
     </nav>
   </header>
 
 
 <section id="sobre">
-  <h2>Sobre</h2>
+  <h2>About</h2>
   <p>Wishlist of<br>
     (much needed or highly sought after)<br>
     items for The Jaspers</p>
@@ -38,7 +38,7 @@ Simple web page with wishlist items.
 
   
 <section id="item">
-  <h2>Ropa</h2>
+  <h2>Clothes</h2>
   
   <section class="item-grid">
     <div class="item-tile">
@@ -101,7 +101,7 @@ https://www.icebreaker.com/en-nz/womens-baselayers/300-merinofine-thermal-leggin
 </section>
   
 <section id="casa">
-  <h2>Casa</h2>
+  <h2>Home</h2>
   <div>
     <a id="profile-link" href="item-link"
       target="_blank">
@@ -128,7 +128,7 @@ https://www.icebreaker.com/en-nz/womens-baselayers/300-merinofine-thermal-leggin
 </section>
   
 <section id="aficiones">
-  <h2>Aficiones</h2>
+  <h2>Hobbies</h2>
   <div>
     <a id="profile-link" href="item-link"
       target="_blank">
@@ -180,8 +180,8 @@ https://www.icebreaker.com/en-nz/womens-baselayers/300-merinofine-thermal-leggin
 </section>
   
 <section id="dinero">
-  <h2>Dinero</h2>
-  <p>¡Más dinero muy pronto!
+  <h2>Money</h2>
+  <p>
     $ toward insulation
     https://greendoginsulation.co.nz/products/knauf-earthwool-insulation/
     $ toward rug
@@ -191,11 +191,11 @@ https://www.icebreaker.com/en-nz/womens-baselayers/300-merinofine-thermal-leggin
 </section>
   
 <section id="otra">
-  <h2>Otra</h2>
-  <p>¡Experiencias, y más!</p>
+  <h2>Other</h2>
+  <p>Experiences and more</p>
 </section>
 
 </main>
 </body>
 
-<footer>¡Muchas gracias!</footer>
+<footer>Many thanks!</footer>
