fast car index.html

--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@ Simple web page with wishlist items.
       <p class="item-name">
 
          
-          <li>Fast charger for Nissan Leaf<br>
-            <a href="LINK EX" target="_blank">
-          </li>
+            <a href="https://smartevchargers.co.nz/shop/charging-cables/type-2-to-type-1-ev-cable/" target="_blank">Fast charger for Nissan Leaf</a>
+
       
             https://www.anthropologie.com/shop/herbin-lounge-chair?_gl=1%2Addnz7h%2A_up%2AMQ..&category=furniture-chairs&color&gclid=Cj0KCQjww4-hBhCtARIsAC9gR3aaFgBq8Qd3dhZVPGa6OpdRJ4uVCRhZkfKZQUSgVHQjw5lhIL1DRHoaAo8PEALw_wcB&gclsrc=aw.ds <br>
             https://www.anthropologie.com/shop/boucle-bentwood-armchair2?category=furniture-chairs&color=011&_gl=1%2a3s88vr%2a_up%2aMQ..&gclid=Cj0KCQjww4-hBhCtARIsAC9gR3aaFgBq8Qd3dhZVPGa6OpdRJ4uVCRhZkfKZQUSgVHQjw5lhIL1DRHoaAo8PEALw_wcB&gclsrc=aw.ds&type=STANDARD&size=One%20Size&quantity=1 <br>
