--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Simple web page with wishlist items.
 </section>
 
   
-<section id="item">
+<section id="ropa">
   <h2>Clothes</h2>
         <p class="item-name">
 
