--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@ Simple web page with wishlist items.
         <ul>  
           <li>Rock climbing guide book<br>
             <ul>
-              <li><a href="https://shop.alpineclub.org.nz/product/rock-deluxe-south/" target="_blank"></li>
+              <li><a href="https://shop.alpineclub.org.nz/product/rock-deluxe-south/" target="_blank">link</a></li>
             </ul>
           </li>
           <li>Snowboard bags (156cm (>153cm) in black/silver & 166cm (>159cm) in black, padded)
-            <dd><a href="https://www.torpedo7.co.nz/products/BUBG223B6/title/2023-gig-snowboard-bag" target="_blank">idea 1</dd>
-            <dd><a href="https://www.torpedo7.co.nz/products/BUBG223B5/title/2023-gig-bag" target="_blank">idea 2</dd>
+            <dd><a href="https://www.torpedo7.co.nz/products/BUBG223B6/title/2023-gig-snowboard-bag" target="_blank">idea 1</a></dd>
+            <dd><a href="https://www.torpedo7.co.nz/products/BUBG223B5/title/2023-gig-bag" target="_blank">idea 2</a></dd>
           </li>
         </ul>
 
