more content index.html

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ Simple web page with wishlist items.
       <p>
        <ul>  
           <li>Fast charger for Nissan Leaf
-            <dd><a href="https://smartevchargers.co.nz/shop/charging-cables/type-2-to-type-1-ev-cable/" target="_blank">6kw</a></dd>
-            <dd><a href="https://smartevchargers.co.nz/shop/charging-cables/type-2-to-type-1-ev-cable/" target="_blank">22kw</a></dd>
+            <dd><a href="https://smartevchargers.co.nz/shop/wall-mount-ev-chargers/wall-mount-smart-ev-charger-32a/" target="_blank">7.6kw</a></dd>
+            <dd><a href="https://smartevchargers.co.nz/shop/wall-mount-ev-chargers/22kw-3phase-wall-charger-wifi/" target="_blank">22kw</a></dd>
           </li>
 
           <li>Lujo lounge chairs and hammock
@@ -149,10 +149,13 @@ Simple web page with wishlist items.
   <h2>Money</h2>
   <p>
     $ toward insulation
-    https://greendoginsulation.co.nz/products/knauf-earthwool-insulation/
+    <a href="https://greendoginsulation.co.nz/products/knauf-earthwool-insulation/" target="_blank">greendog insulation</a>
+    $ toward hot water heater
+    <a href="https://tradedepot.co.nz/midea-heat-pump-water-heater-280l/" target="_blank">hot water heat pump</a>
+
     $ toward rug
-    https://boltofcloth.com/collections/living/products/multi-stem-rug-in-kingfisher
-    https://boltofcloth.com/collections/living/products/optical-flower-rug-runner-in-teal
+    <a href="https://boltofcloth.com/collections/living/products/multi-stem-rug-in-kingfisher target="_blank">idea</a>
+    <a href="https://boltofcloth.com/collections/living/products/optical-flower-rug-runner-in-teal" target="_blank">link</a>
   </p>
 </section>
   
