--- a/index.html
+++ b/index.html
@@ -61,10 +61,6 @@ Simple web page with wishlist items.
               <dd><a href="https://kinco.com/901t-m" target="_blank">link for women's L</a></dd>
             </li>
 
-            <li>Undies Mo (size ?; navy, mist, pecan, boysenberry, lilac)
-              <dd><a href="https://nisa.co.nz/collections/briefs/products/quinn-naturals-range-1?_pos=1&_fid=a54dd7754&_ss=c&variant=42281422160062" target="_blank">link</a></dd>
-            </li>
-
             <li>Shoes for Cam
               <dd><a href="https://olukai.com/products/laeahi-li-mens-sneakers-husk?variant=39744718930019" target="_blank">idea 1</a></dd>
               <dd><a href="https://olukai.com/products/waialae-mens-leather-golf-shoes-black?variant=39762740248675" target="_blank">idea 2</a></dd>
@@ -80,6 +76,10 @@ Simple web page with wishlist items.
             <li>Exercise Pants for Mo
               <dd><a href="https://www.prana.com/p/mojave-pant/1972491.html?dwvar_1972491_color=Dark%20Sky" target="_blank">idea 1 size M</a></dd>
               <dd><a href="https://www.prana.com/p/double-peak-jogger/1969021.html?dwvar_1969021_color=Grey%20Blue" target="_blank">idea 2 size 6</a></dd>
+            </li>
+
+            <li>Undies Mo (color navy, mist, pecan, boysenberry, lilac; size L)
+              <dd><a href="https://nisa.co.nz/collections/briefs/products/quinn-naturals-range-1?_pos=1&_fid=a54dd7754&_ss=c&variant=42281422160062" target="_blank">link</a></dd>
             </li>
           </ul>
     </div>
@@ -184,6 +184,9 @@ Simple web page with wishlist items.
 <section id="otra">
   <h2>Other</h2>
   <p>Experiences and more
+
+
+    <em>Many thanks!</em>
   </p>
 </section>
 
