more content index.html

--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@ Simple web page with wishlist items.
               <dd><a href="https://kinco.com/901t-m" target="_blank">link for women's L</a></dd>
             </li>
 
-            <li>Shoes for Cam
+            <li>Shoes for Cam<br>
+              (these both slip on and have a drop heal)
               <dd><a href="https://olukai.com/products/laeahi-li-mens-sneakers-husk?variant=39744718930019" target="_blank">idea 1</a></dd>
-              <dd><a href="https://olukai.com/products/waialae-mens-leather-golf-shoes-black?variant=39762740248675" target="_blank">idea 2</a></dd>
-              <dd><a href="https://olukai.com/products/laeahi-li-ili-mens-leather-sneakers-dark-wood?variant=32925443522659" target="_blank">idea 3</a></dd>
-              <dd><a href="https://olukai.com/products/laeahi-li-ili-mens-leather-sneakers-charcoal?variant=32925441359971" target="_blank">idea 4</a></dd>
+              <dd><a href="https://olukai.com/products/laeahi-li-ili-mens-leather-sneakers-charcoal?variant=32925441359971" target="_blank">idea 2</a></dd>
             </li>
 
             <li>Winter Jacket / Parka for Cam
