--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@ Simple web page with wishlist items.
               <dd><a href="https://kinco.com/901t-m" target="_blank">link for women's L</a></dd>
             </li>
 
-            <li>Shoes for Cam<br>
-              (these both slip on and have a drop heal)
+            <li>Shoes for Cam (these both slip on and have a drop heal)
               <dd><a href="https://olukai.com/products/laeahi-li-mens-sneakers-husk?variant=39744718930019" target="_blank">idea 1</a></dd>
               <dd><a href="https://olukai.com/products/laeahi-li-ili-mens-leather-sneakers-charcoal?variant=32925441359971" target="_blank">idea 2</a></dd>
             </li>
@@ -105,7 +104,7 @@ Simple web page with wishlist items.
             <dd><a href="https://www.shopirobot.co.nz/accessories/roomba-accessories/roomba-i-series/set-of-extractors-roomba-e-i-j-comboj-series.html" target="_blank">link 2</a></dd>
           </li>
 
-          <li>Electric toothbrush x2</li>
+          <li>Electric toothbrush x2</li><br>
           
           <li>Lujo outdoor lounge chairs (blend sage, filled)
             <dd><a href="https://www.lujo.co.nz/collections/all/products/indoor-outdoor-bean-bag-chair" target="_blank">link 1</a></dd>
