--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Simple web page with wishlist items.
 <section id="sobre">
   <h2>About</h2>
   <p>Wishlist of<br>
-    (much needed to pie in the sky)<br>
+    (<em>much needed</em> to <em>pie in the sky</em>)<br>
     ideas for The Jaspers</p>
 </section>
 
@@ -195,6 +195,8 @@ Simple web page with wishlist items.
 <section id="otra">
   <h2>Other</h2>
   <p>Experiences and more
+    <br>
+    <br>
     <br>
     <br>
     <em>Many thanks!</em>
