more crimson index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Simple web page with wishlist items.
             <dd><a href="https://www.anthropologie.com/shop/boucle-bentwood-armchair2?category=furniture-chairs&color=011&_gl=1%2a3s88vr%2a_up%2aMQ..&gclid=Cj0KCQjww4-hBhCtARIsAC9gR3aaFgBq8Qd3dhZVPGa6OpdRJ4uVCRhZkfKZQUSgVHQjw5lhIL1DRHoaAo8PEALw_wcB&gclsrc=aw.ds&type=STANDARD&size=One%20Size&quantity=1">link 2</a></dd>
           </li>
 
-          <li>Roomba i7 Replacement Rollers (iRobot brand only)
+          <li class="desperate">Roomba i7 Replacement Rollers (iRobot brand only)
             <dd><a href="https://www.shopirobot.co.nz/accessories/roomba-accessories/roomba-i-series/cleaning-replenishment-kit-roomba-e-i-j-series.html" target="_blank">link 1</a></dd>
             <dd><a href="https://www.shopirobot.co.nz/accessories/roomba-accessories/roomba-i-series/set-of-extractors-roomba-e-i-j-comboj-series.html" target="_blank">link 2</a></dd>
           </li>
@@ -194,12 +194,8 @@ Simple web page with wishlist items.
   
 <section id="otra">
   <h2>Other</h2>
-  <p>Experiences and more
-    <br>
-    <br>
-    <br>
-    <br>
-    <em style="align: center;">Many thanks!</em>
+  <p>Experiences and more<br>
+    <em style="text-align: center; margin-top: 60pt;">Many thanks!</em>
   </p>
 </section>
 
