--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@ Simple web page with wishlist items.
   
 <section id="otra">
   <h2>Other</h2>
-  <p>Experiences and more<br>
-    <em style="text-align: center; margin-top: 60pt;">Many thanks!</em>
+  <p>Experiences and more
   </p>
 </section>
 
